# debian-clinfo

./: Makefile.am  Makefile.in  README.md  clinfo.cpp  config.h.in  configure  configure.ac  device.cpp  device.h  output_amd_compat.cpp  output_amd_compat.h  output_common.cpp  output_common.h  platform.cpp  platform.h
debian/: changelog  clinfo.install  clinfo.manpages  control  copyright  rules
debian/patches/: fix-no-devices.diff  series  spelling.diff
